--- a/index.html
+++ b/index.html
@@ -39,43 +39,48 @@
                     <h2 class="text-xl font-semibold text-dark-text">資料輸入區 - {{ currentGroup.name }}</h2>
                 </div>
                 <div class="p-6 space-y-4">
+
+                    <!-- 標題 -->
                     <div class="space-y-2">
                         <label class="text-sm font-medium text-dark-text block">資料標題</label>
                         <input v-model="formTitle" type="text" placeholder="請輸入標題"
-                            class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text">
+                            class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text text-lg">
                     </div>
 
-                    <!-- 項目 1~4 -->
-                    <div v-for="i in 4" :key="i" class="space-y-2">
-                        <label :for="'item' + i" class="text-sm font-medium text-dark-text block">項目 {{ i }}</label>
-                        <input :id="'item' + i" v-model="formData['item' + i]" type="text"
-                            :placeholder="'請輸入項目 ' + i"
-                            class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text">
+                    <!-- 全欄位統一渲染 -->
+                    <div v-for="field in fieldNames" :key="field.key" class="space-y-2">
+                        <label :for="field.key" class="text-sm font-medium text-dark-text block">{{ field.label }}</label>
+
+                        <!-- Select -->
+                        <template v-if="field.type === 'select'">
+                            <select v-model="formData[field.key]"
+                                class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text">
+                                <option disabled value="">請選擇 {{ field.label }}</option>
+                                <option v-for="option in field.options" :key="option" :value="option">{{ option }}</option>
+                            </select>
+                        </template>
+
+                        <!-- Tags -->
+                        <template v-else-if="field.type === 'tags'">
+                            <div class="flex flex-wrap gap-2">
+                                <span v-for="(tag, index) in formData[field.key]" :key="index"
+                                    class="flex items-center bg-blue-600 text-white px-3 py-1 rounded-full">
+                                    {{ tag }}
+                                    <button @click="removeTag(field.key, index)" class="ml-2">&times;</button>
+                                </span>
+                            </div>
+                            <input v-model="tagInput[field.key]" @keyup.enter="addTag(field.key)" type="text" placeholder="輸入後按 Enter"
+                                class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text">
+                        </template>
+
+                        <!-- Input -->
+                        <template v-else>
+                            <input :id="field.key" v-model="formData[field.key]" type="text"
+                                :placeholder="'請輸入 ' + field.label"
+                                class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text">
+                        </template>
                     </div>
 
-                    <!-- 項目 5: Tag 輸入 -->
-                    <div class="space-y-2">
-                        <label class="text-sm font-medium text-dark-text block">項目 5</label>
-                        <div class="flex flex-wrap gap-2">
-                            <span v-for="(tag, index) in formData.item5" :key="index"
-                                class="flex items-center bg-blue-600 text-white px-3 py-1 rounded-full">
-                                {{ tag }}
-                                <button @click="removeItem5Tag(index)" class="ml-2">&times;</button>
-                            </span>
-                        </div>
-                        <input v-model="item5Input" @keyup.enter="addItem5Tag" type="text" placeholder="輸入後按 Enter"
-                            class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text">
-                    </div>
-
-                    <!-- 項目 6~15 -->
-                    <div v-for="i in 10" :key="i+5" class="space-y-2">
-                        <label :for="'item' + (i+5)" class="text-sm font-medium text-dark-text block">
-                            項目 {{ i+5 }}
-                        </label>
-                        <input :id="'item' + (i+5)" v-model="formData['item' + (i+5)]" type="text"
-                            :placeholder="'請輸入項目 ' + (i+5)"
-                            class="w-full px-3 py-2 bg-dark-bg border border-dark-border rounded-md text-dark-text">
-                    </div>
 
                     <div class="pt-6 space-y-3">
                         <button @click="handleSubmit"
@@ -83,8 +88,10 @@
                         <button @click="clearForm"
                             class="w-full bg-gray-600 text-white py-2 rounded-md hover:bg-gray-700">清空表單</button>
                     </div>
+
                 </div>
             </div>
+
 
             <!-- 右側已提交資料 -->
             <div class="bg-dark-card border border-dark-border rounded-lg">
@@ -118,14 +125,14 @@
 
                                 <div v-if="activeIndex === index" class="p-4 border-t border-dark-border">
                                     <div class="grid grid-cols-1 gap-2">
-                                        <div v-for="i in 15" :key="i" class="flex items-center space-x-3">
-                                            <span class="text-sm font-medium text-dark-muted min-w-[60px]">項目 {{ i }}:</span>
+                                        <div v-for="field in fieldNames" :key="field.key" class="flex items-center space-x-3">
+                                            <span class="text-sm font-medium text-dark-muted min-w-[60px]">{{ field.label }}:</span>
                                             <span class="text-sm text-dark-text bg-dark-card px-3 py-1 rounded border border-dark-border flex-1">
-                                                <template v-if="i === 5">
+                                                <template v-if="field.key === 'item5'">
                                                     {{ element.item5.length > 0 ? element.item5.join(', ') : '未填寫' }}
                                                 </template>
                                                 <template v-else>
-                                                    {{ element['item' + i] || '未填寫' }}
+                                                    {{ element[field.key] || '未填寫' }}
                                                 </template>
                                             </span>
                                         </div>
